--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "zfcampus/zf-oauth2-doctrine": "*"
-    }
+        "zfcampus/zf-oauth2-doctrine": "~0.3"
+    },
     "autoload": {
         "psr-4": {
             "ZF\\OAuth2\\Doctrine\\Console\\": "src/",
