--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5",
-        "zfcampus/zf-oauth2-doctrine": "^1.0"
+        "api-skeletons/zf-oauth2-doctrine": "~1.0"
     },
     "autoload": {
         "psr-4": {
