--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "api-skeletons/zf-oauth2-doctrine-console",
     "description": "Console management of an Apigility Doctrine OAuth2 server",
-    "license": "proprietary",
+    "license": "MIT",
     "keywords": [
         "doctrine",
         "console",
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5",
-        "api-skeletons/zf-oauth2-doctrine": "~1.0"
+        "api-skeletons/zf-oauth2-doctrine": "*"
     },
     "autoload": {
         "psr-4": {
