Scope controller refactored

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "oauth2",
         "apigility"
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5",
-        "api-skeletons/zf-oauth2-doctrine": "*"
+        "php": "^7.1",
+        "api-skeletons/zf-oauth2-doctrine": "~2.0",
+        "zendframework/zend-mvc-console": "~1.1"
     },
     "autoload": {
         "psr-4": {
@@ -21,5 +21,11 @@
         "classmap": [
             "Module.php"
         ]
+    },
+    "extra": {
+        "zf": {
+            "component": "ZF\\OAuth2\\Doctrine\\Console",
+            "config-provider": "ZF\\OAuth2\\Doctrine\\Console\\ConfigProvider"
+        }
     }
 }
