Allow zf-oauth2-doctrine v3.0

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "api-skeletons/zf-oauth2-doctrine": "~2.0",
+        "api-skeletons/zf-oauth2-doctrine": "~2.0 || ^3.0",
         "zendframework/zend-mvc-console": "~1.1"
     },
     "autoload": {
